{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 23,
  "lineage": "7deb011c-846b-45fa-fc1f-16d7c279ba9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52744d6551d851e",
            "arn": "arn:aws:ec2:ap-northeast-1:426550965818:instance/i-0a43e755a60f09a92",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a43e755a60f09a92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098034045015bd237",
            "private_dns": "ip-10-0-1-15.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.15",
            "public_dns": "ec2-18-179-112-165.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.179.112.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074640023a10a494f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d652da917a2d0a4",
            "tags": {
              "Name": "saa-free-tier-webserver"
            },
            "tags_all": {
              "Name": "saa-free-tier-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb82d8d1252ecb7a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.saa_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.saa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "saa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:426550965818:internet-gateway/igw-0a1b02b562f7f99ef",
            "id": "igw-0a1b02b562f7f99ef",
            "owner_id": "426550965818",
            "tags": {
              "Name": "saa-igw"
            },
            "tags_all": {
              "Name": "saa-igw"
            },
            "vpc_id": "vpc-0757fbfc1f8217cbd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.saa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:426550965818:route-table/rtb-06606e03d30a3309e",
            "id": "rtb-06606e03d30a3309e",
            "owner_id": "426550965818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1b02b562f7f99ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saa-public-rt"
            },
            "tags_all": {
              "Name": "saa-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0757fbfc1f8217cbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.saa_igw",
            "aws_vpc.saa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064f8b1f2add08ed6",
            "route_table_id": "rtb-06606e03d30a3309e",
            "subnet_id": "subnet-03d652da917a2d0a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.saa_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.saa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "saa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:426550965818:security-group/sg-0fb82d8d1252ecb7a",
            "description": "Allow inbound SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb82d8d1252ecb7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh-http",
            "name_prefix": "",
            "owner_id": "426550965818",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "saa-security-group"
            },
            "tags_all": {
              "Name": "saa-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0757fbfc1f8217cbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.saa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:426550965818:subnet/subnet-03d652da917a2d0a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d652da917a2d0a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "426550965818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "saa-public-subnet"
            },
            "tags_all": {
              "Name": "saa-public-subnet"
            },
            "vpc_id": "vpc-0757fbfc1f8217cbd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.saa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "saa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:426550965818:vpc/vpc-0757fbfc1f8217cbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b8771a712fdcc8f4",
            "default_route_table_id": "rtb-04fde9b4ff7d4392a",
            "default_security_group_id": "sg-09aae444e7c0eccc4",
            "dhcp_options_id": "dopt-0f4b7ec065e2d1021",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0757fbfc1f8217cbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fde9b4ff7d4392a",
            "owner_id": "426550965818",
            "tags": {
              "Name": "saa-practice-vpc"
            },
            "tags_all": {
              "Name": "saa-practice-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}